@@ -12,7 +12,8 @@ v0.5.0
 - removed deprecated field Tbeaufort
 - fixed bug that caused rtgd to abort if the first loop packet did not contain
   inTemp
-
+- changed required WeeWX version to 4.0.0
+- revised config installed by installer
 v0.4.2
 - fix error in some expressions that include > and < where operands could be
   None
